# mbed-ce-example

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cmake-variants.yaml  main.cpp  mbed_app.json5
.github/: copilot-instructions.md
.github/workflows/: compile.yml
apps/: CMakeLists.txt  README.md
apps/blink/: CMakeLists.txt  main.cpp
apps/crash-report-test/: CMakeLists.txt  main.cpp
cmake/: desktop.cmake  firmware.cmake
cmake/presets/: Nucleo32_L432KC.json  Nucleo64_F446RE.json  desktop.json  firmware-base.json
components/: README.md
libs/: CMakeLists.txt  README.md
libs/ex_lib1/: CMakeLists.txt
libs/ex_lib1/include/ex_lib1/: ex_lib1.hpp
libs/ex_lib1/src/: ex_lib1.cpp
libs/ex_lib1/tests/: CMakeLists.txt
libs/ex_lib1/tests/src/: test.cpp
tools/: README.md
